2006-09-08  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (IStatusLog.readlines): make it easier to
	walk through StatusLogs one line at a time, mostly for the benefit of
	ShellCommand.createSummary methods.
	* buildbot/status/builder.py (LogFile.readlines): implement it.
	Note that this is not yet memory-efficient, it just pulls the
	whole file into RAM and then splits it up with a StringIO.
	Eventually this should be a generator that only pulls chunks from
	disk as necessary.
	* buildbot/test/test_status.py (Log.testReadlines): test it

	* docs/buildbot.texinfo: update to match changes
	* buildbot/process/factory.py: stop using old definitions
	* buildbot/process/process_twisted.py: same
	* buildbot/test/test_*.py: same

	* buildbot/process/step_twisted.py: move definition to..
	* buildbot/steps/python_twisted.py: .. here, unfortunately python's
	relative-import mechanisms prevent this from being named 'twisted'
	or 'python/twisted' as I would have preferred.

	* buildbot/process/maxq.py: move definition to..
	* buildbot/steps/maxq.py: .. here, leave a compatibility import

	* buildbot/process/step.py: split the user-visible BuildSteps into
	separate files, all under buildbot/steps/
	* buildbot/steps/source.py: this holds VC-checkout steps like SVN
	* buildbot/steps/shell.py: this holds ShellCommand and friends
	* buildbot/steps/dummy.py: this holds the testing steps like Dummy

2006-09-05  Brian Warner  <warner@lothar.com>

	* lots: run pyflakes, removed a lot of unused imports, changed the
	form of some conditional imports to remove false pyflakes
	warnings. There are still a number of warnings left, mostly from
	imports that are done for their side-effects.
	* buildbot/test/test_vc.py: import twisted.python.failure, since it
	was missing

2006-08-26  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_locks.py (Unit.testLater): make the tests
	compatible with twisted-1.3.0, for some reason I just can't seem
	to let go of the past.
